--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="my_purple">#804AFF</color>
     <color name="orange_icon">#F44336</color>
     <color name="navy_blue">#532bab</color>
+    <color name="red">#FF0000</color>
+
 </resources>
