--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,6 +22,7 @@
 
     <EditText
         android:id="@+id/KeywordEditText"
+
         android:layout_width="411dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
@@ -36,7 +37,7 @@
         android:id="@+id/textView4"
         android:layout_width="112dp"
         android:layout_height="26dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="16dp"
         android:text="Category"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -231,6 +232,23 @@
                 app:layout_constraintStart_toEndOf="@id/radio_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
+            <TextView
+                android:id="@+id/validation2"
+                android:layout_width="180dp"
+                android:layout_height="23dp"
+                android:text="TextView"
+                android:textColor="@color/red"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.136"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/zipcode"
+                app:layout_constraintVertical_bias="0.0"
+                tools:visibility="gone" />
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -259,4 +277,18 @@
         app:cornerRadius="2dp"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+
+    <TextView
+        android:id="@+id/validationText"
+        android:layout_width="180dp"
+        android:layout_height="0dp"
+        android:text="TextView"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/KeywordEditText"
+        app:layout_constraintVertical_bias="1.0"
+        tools:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
