--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,7 +25,7 @@
 
         android:layout_width="411dp"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="Enter Keyword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +100,7 @@
         android:id="@+id/textView6"
         android:layout_width="121dp"
         android:layout_height="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Shipping Options"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -130,7 +130,7 @@
         android:id="@+id/textView7"
         android:layout_width="148dp"
         android:layout_height="27dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Enable Near By Search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
@@ -139,7 +139,7 @@
         android:id="@+id/checkBox6"
         android:layout_width="36dp"
         android:layout_height="31dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -149,7 +149,7 @@
         android:id="@+id/textDistance"
         android:layout_width="78dp"
         android:layout_height="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="Distance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -175,7 +175,7 @@
         android:id="@+id/textView9"
         android:layout_width="90dp"
         android:layout_height="18dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="From"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -186,7 +186,7 @@
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="414dp"
-        android:layout_height="93dp"
+        android:layout_height="120dp"
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.251"
@@ -207,6 +207,7 @@
             android:text="Current Location" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
@@ -233,62 +234,57 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-            <TextView
-                android:id="@+id/validation2"
-                android:layout_width="180dp"
-                android:layout_height="23dp"
-                android:text="TextView"
-                android:textColor="@color/red"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.136"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/zipcode"
-                app:layout_constraintVertical_bias="0.0"
-                tools:visibility="gone" />
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </RadioGroup>
+        <TextView
+            android:id="@+id/validation2"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:text="TextView"
+            android:textColor="@color/red"
+            tools:visibility="gone" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
-        android:backgroundTint="#FF5722"
-        android:text="SEARCH"
-        app:cornerRadius="2dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+            </RadioGroup>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="150dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
-        android:backgroundTint="#FF5722"
-        android:text="CLEAR"
-        app:cornerRadius="2dp"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="150dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="2dp"
+                android:backgroundTint="#FF5722"
+                android:text="SEARCH"
+                app:cornerRadius="2dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
 
-    <TextView
-        android:id="@+id/validationText"
-        android:layout_width="180dp"
-        android:layout_height="0dp"
-        android:text="TextView"
-        android:textColor="@color/red"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/KeywordEditText"
-        app:layout_constraintVertical_bias="1.0"
-        tools:visibility="gone" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="150dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="2dp"
+                android:backgroundTint="#FF5722"
+                android:text="CLEAR"
+                app:cornerRadius="2dp"
+                app:layout_constraintStart_toEndOf="@+id/button"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+
+            <TextView
+                android:id="@+id/validationText"
+                android:layout_width="180dp"
+                android:layout_height="0dp"
+                android:text="TextView"
+                android:textColor="@color/red"
+                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/KeywordEditText"
+                app:layout_constraintVertical_bias="1.0"
+                tools:visibility="gone" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
