--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -279,6 +279,7 @@
             android:textColor="@color/red"
             tools:visibility="gone" />
 
+
             </RadioGroup>
 
             <Button
@@ -318,5 +319,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/KeywordEditText"
                 app:layout_constraintVertical_bias="1.0"
                 tools:visibility="gone" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
