--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
+        <ImageView
             android:id="@+id/textViewTitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
