--- a/app/src/main/res/layout/activity_product_results.xml
+++ b/app/src/main/res/layout/activity_product_results.xml
@@ -70,7 +70,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-
+    <TextView
+        android:id="@+id/noResultsTextView"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shadow_background"
+        android:elevation="4dp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="No items found"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
