--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!-- item_search.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
@@ -9,44 +10,77 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        >
 
         <ImageView
             android:id="@+id/textViewTitle1"
-            android:layout_width="152dp"
-            android:layout_height="152dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:scaleType="centerInside"
             android:adjustViewBounds="true"
             android:layout_gravity="center_horizontal"
             android:text="Title"
             />
+
         <TextView
             android:id="@+id/textViewTitle2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title" />
-        <TextView
-            android:id="@+id/textViewTitle3"
+            android:text="Title"
+            android:maxLines="2"
+            android:ellipsize="end" />
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewTitle3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Title"
+                android:gravity="start"/>
+
+            <ImageView
+                android:id="@+id/wishlistIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/cart_plus"
+                android:layout_gravity="end"/>
+        </LinearLayout>
         <TextView
             android:id="@+id/textViewTitle4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title" />
-        <TextView
-            android:id="@+id/textViewTitle5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title" />
-        <TextView
-            android:id="@+id/textViewTitle6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title" />
 
-        <!-- Add other TextViews for zipcode, condition, price, shippingType -->
+        <!-- New LinearLayout for textViewTitle5 and textViewTitle6 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewTitle5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Title"
+                android:gravity="start" />
+
+            <TextView
+                android:id="@+id/textViewTitle6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="Title"
+                android:textColor="@color/navy_blue"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <!-- Add other TextViews or Views here as needed -->
         <!-- ... -->
     </LinearLayout>
 </androidx.cardview.widget.CardView>
