--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="orange_icon">#F44336</color>
     <color name="navy_blue">#532bab</color>
     <color name="red">#FF0000</color>
+    <color name="grey">#E0E0E0</color>
+
 
 </resources>
