--- a/app/src/main/res/layout/activity_product_results.xml
+++ b/app/src/main/res/layout/activity_product_results.xml
@@ -26,8 +26,10 @@
             android:id="@+id/backArrow"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+
             android:padding="16dp"
-            android:src="@drawable/arrow_left" /> <!-- Replace with your back arrow drawable -->
+            android:src="@drawable/arrow_left"
+            tools:layout_editor_absoluteX="16dp" /> <!-- Replace with your back arrow drawable -->
 
         <!-- Title TextView -->
         <TextView
@@ -55,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Searching Products..."
+        android:textColor="@color/navy_blue"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintTop_toBottomOf="@id/progressBar"
         app:layout_constraintStart_toStartOf="parent"
