--- a/app/src/main/res/layout/item_image_card.xml
+++ b/app/src/main/res/layout/item_image_card.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/imageViewCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:scaleType="centerCrop" />
 
 </androidx.cardview.widget.CardView>
