--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -18,11 +18,10 @@
             android:id="@+id/textViewTitle1"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true"
             android:layout_gravity="center_horizontal"
-            android:text="Title"
-            />
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            android:text="Title" />
 
         <TextView
             android:id="@+id/textViewTitle2"
