--- a/app/src/main/res/layout/fragment_similar.xml
+++ b/app/src/main/res/layout/fragment_similar.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- fragment_photos.xml -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container5"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SimilarFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSimilar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
