--- a/app/src/main/res/layout/item_similar.xml
+++ b/app/src/main/res/layout/item_similar.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <!-- First Spinner -->
+    <!-- Horizontal LinearLayout for Spinners -->
+
+    <!-- Second Spinner -->
+
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +29,7 @@
         <ImageView
             android:id="@+id/imageViewProduct"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
             android:layout_weight="2"
             android:scaleType="centerCrop" />
 
@@ -62,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:text="title"
                 android:gravity="end"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+
                 android:textColor="@color/navy_blue"
                 android:textStyle="bold" />
 
@@ -71,3 +84,4 @@
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+</LinearLayout>
