--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.EBayShoppingApplictaion" parent="Base.Theme.EBayShoppingApplictaion" />
+    <style name="Theme.SplashScreen"
+
+        parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowDisablePreview">true</item>
+    </style>
 </resources>
