--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -20,11 +20,11 @@
 
         <LinearLayout
             android:id="@+id/indicatorLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="174dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
             android:padding="4dp">
             <!-- Indicators will be added programmatically -->
         </LinearLayout>
